2006-07-26  David Gilbert  <david.gilbert@object-refinery.com>

	* java/util/Vector.java: Fixed API doc typo.

2006-07-26  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/BandedSampleModel.java
	(createCompatibleSampleModel): Fixed typo in loop increment, set
	correct scanlineStride, and updated API docs.

2006-07-25  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicPopupMenuUI.java
	(NavigateAction): New inner class. This is responsible for
	keyboard navigation through menus.
	(KeyboardHelper): New inner class. This manages the
	keyboard mappings and focus when a popup opens or closes.
	(keyboardHelper): New static field.
	(numPopups): New static field.
	(installUI): Create KeyboardHelper for first popup.
	Call installKeyboardActions().
	(installKeyboardActions): Removed NotImplementedException.
	This method is a no-op.
	(installKeyboardActionsImpl): New method. Installs keyboard
	mapping when a popup is opened.
	(getActionMap): New helper method.
	(createDefaultActions): New helper method.
	(uninstallUI): Uninstall KeyboardHelper when last Popup is
	uninstalled. Call uninstallKeyboardActions().
	(uninstallKeyboardActions): Removed NotImplementedException.
	This method is a no-op.
	(uninstallKeyboardActionsImpl): New method. Uninstalls keyboard
	mapping when a popup is closed.
	
2006-07-25  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(requestFocus()): Reimplemented to use requestFocusImpl().
	(requestFocus(boolean)): Reimplemented to use requestFocusImpl().
	(requestFocusInWindow()): Reimplemented to use requestFocusImpl().
	(requestFocusInWindow(boolean)): Reimplemented to use
	requestFocusImpl().
	(requestFocusImpl): Reimplemented focus request to use
	new peer method. Also added some obvious additional checks
	for rejecting focus requests early.
	* java/awt/ComponentPeer.java
	(requestFocus(Component,boolean,boolean,long)): Documented
	this method.
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java